# hello-world-sdl3

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  run.bat  vcpkg-configuration.json
